Enhance project configuration and testing infrastructure
- Update ESLint configurations for test files
- Improve package.json with more detailed metadata and publishing scripts
- Refactor README to provide clearer English documentation
- Add configuration support and logging improvements
- Standardize code formatting and linting across test files
- Enhance error handling and testing utilities

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,5 +30,13 @@
     "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "type-imports" }],
     "arrow-parens": ["error", "always"],
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/__tests__/**/*.ts"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    }
+  ]
 } 
