--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "API.md"
   ],
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=17.0.0"
   },
   "scripts": {
     "build": "tsup",
@@ -27,7 +27,7 @@
     "format": "prettier --write 'src/**/*.ts'",
     "format:check": "prettier --check 'src/**/*.ts'",
     "spell:check": "cspell 'src/**/*.ts'",
-    "prepare": "npm run build",
+    "prepare": "husky || true",
     "prepublishOnly": "npm run lint && npm run test"
   },
   "keywords": [
@@ -62,7 +62,9 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
     "globals": "^16.0.0",
+    "husky": "9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "15.4.3",
     "prettier": "^3.5.2",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
@@ -80,5 +82,15 @@
     "openai": "^4.85.4",
     "pinecone-client": "^2.0.0",
     "weaviate-ts-client": "^2.2.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "cspell"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
