--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'  # vで始まるタグ（例：v1.0.0）がプッシュされたときに実行
   pull_request:
     branches: [ main ]
 
@@ -28,10 +30,15 @@ jobs:
 
   publish:
     needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.event.head_commit.message, 'chore(release):')
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Get version from tag
+      id: get_version
+      run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
@@ -39,6 +46,15 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
     - run: npm run build
+    - name: Check package version
+      run: |
+        PACKAGE_VERSION=$(node -p "require('./package.json').version")
+        TAG_VERSION=${{ steps.get_version.outputs.VERSION }}
+        if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
+          echo "Warning: Tag version ($TAG_VERSION) does not match package.json version ($PACKAGE_VERSION)"
+          echo "Updating package.json version to match tag"
+          npm version $TAG_VERSION --no-git-tag-version
+        fi
     - run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
